Fix SiteSettings jumping

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -14,7 +14,7 @@ $footer-height: 57px;
 
 $table-hover-bg: #F8F8F8;
 
-$admin-card-height: 550px;
+$admin-card-height: 650px;
 
 $button-min-width: 120px;
 
